--- a/index.html
+++ b/index.html
@@ -1,6 +1,15 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+  <!-- Google tag (gtag.js) -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-WHR9ENHWJS"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'G-WHR9ENHWJS');
+</script>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>BrewByte Cafe - Home</title>
@@ -195,3 +204,4 @@
               <tr class="table-row" id="row-73"><td class="cell id">73</td><td class="cell name">Fruit Bowl</td><td class="cell category">Healthy</td><td class="cell price">199</td><td class="cell rating">4.3</td></tr>
               <tr class="table-row" id="row-74"><td class="cell id">74</td><td class="cell name">Oats & Honey Bowl</td><td class="cell category">Healthy</td><td class="cell price">189</td><td class="cell rating">4.2</td></tr>
               <tr class="table-row" id="row-75"><td class="cell id">75</
+
